<resources>
    <string name="app_name">3072</string>
    <string name="textview">TextView</string>
    <string name="undo">Шаг назад</string>
    <string name="back">Заново</string>
    <string name="p4">4х4</string>
    <string name="p3">3х3</string>
    <string name="p5">5х5</string>
    <string name="records_n">Records:\n</string>
    <string name="start_button">Начать игру</string>
    <string name="size">Размер поля</string>
    <string name="game_number">Игровое число</string>
    <string name="_2_2048">2 (2048)</string>
    <string name="_3_3072">3 (3072)</string>
    <string name="name_app">3072</string>
    <string name="back_menu">← Назад в меню</string>
    <string name="records">Рекорды</string>
</resources>
