<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141414"
    tools:context="com.example.game3072.MainMenu">

    <Button
        android:id="@+id/Start"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/m_sb"
        android:shadowColor="#FF3939"
        android:text="@string/start_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:backgroundTint="#FF3939"
        app:layout_constraintBottom_toTopOf="@+id/records"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/records"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginTop="510dp"
        android:fontFamily="@font/m_sb"
        android:shadowColor="#FF3939"
        android:text="Таблица рекордов"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:backgroundTint="#EDFFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/m_sb"
        android:text="@string/size"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/m_sb"
        android:text="@string/game_number"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        tools:ignore="SpUsage" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_sb"
            android:text="@string/p3"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:theme="@style/MyRB"
            tools:ignore="SpUsage" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/m_sb"
            android:text="@string/p4"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:theme="@style/MyRB"
            tools:ignore="SpUsage" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_sb"
            android:text="@string/p5"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:theme="@style/MyRB"
            tools:ignore="SpUsage" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/m_sb"
            android:text="@string/_2_2048"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:theme="@style/MyRB"
            tools:ignore="SpUsage" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/m_sb"
            android:text="@string/_3_3072"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:theme="@style/MyRB"
            tools:ignore="SpUsage" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="310dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="#FF3939"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="#141414"
        android:fontFamily="@font/bebas_neue"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/name_app"
        android:textColor="#FFFFFF"
        android:textSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>
